multiple collection item added in one collection is done

--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -315,6 +315,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.ArticleDetailsContainerActivity"
+            android:configChanges="uiMode"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.CityBestArticleListingActivity"
@@ -590,6 +591,7 @@
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".ui.activity.BadgeActivity" />
         <activity android:name=".ui.activity.NotificationProfileSetting" />
+        <activity android:name=".ui.activity.collection.AddMultipleCollectionItemActivity" />
 
         <receiver android:name=".reminders.CancelNotificationReceiver" />
 
