--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'com.google.android.libraries.places:places:2.0.0'
     implementation 'com.google.android.gms:play-services-analytics:17.0.0'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    implementation 'com.google.android.gms:play-services-auth-api-phone:17.1.0'
     implementation 'com.google.android.gms:play-services-ads:18.1.1'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.firebase:firebase-appindexing:19.0.0'
@@ -61,6 +62,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
     implementation 'org.apmem.tools:layouts:1.10@aar'
     implementation 'com.github.yalantis:ucrop:2.2.4'
     implementation 'com.getbase:floatingactionbutton:1.10.1'
@@ -82,17 +84,22 @@ dependencies {
     implementation 'com.facebook.android:account-kit-sdk:5.4.0'
     implementation 'com.github.linger1216:labelview:v1.1.2'
     implementation 'com.googlecode.mp4parser:isoparser:1.1.21'
-    implementation 'com.google.android.exoplayer:exoplayer:r2.5.1'
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.8.2'
+    implementation 'com.google.android.exoplayer:exoplayer-dash:2.8.2'
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.8.2'
+    implementation 'com.google.android.exoplayer:exoplayer-hls:2.8.2'
     implementation 'io.branch.sdk.android:library:3.+'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.11'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
-    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.12.1'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'com.github.douglasjunior:android-simple-tooltip:0.2.2'
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.github.nkzawa:socket.io-client:0.6.0'
+    implementation 'com.smartlook.recording:app:1.2.0-native'
+
     compile('io.socket:socket.io-client:0.8.3') {
         exclude group: 'org.json', module: 'json'
     }
