multiple collection item two tab created and Read done

--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -593,6 +593,7 @@
         <activity android:name=".ui.activity.BadgeActivity" />
         <activity android:name=".ui.activity.NotificationProfileSetting" />
         <activity android:name=".ui.activity.phoneLogin.FacebookFriends" />
+        <activity android:name=".ui.activity.collection.AddMultipleCollectionItemActivity" />
 
         <receiver android:name=".reminders.CancelNotificationReceiver" />
 
