working on 100 word story new flow

--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -502,6 +502,7 @@
         <activity
             android:name=".ui.activity.ShortStoryModerationOrShareActivity"
             android:theme="@style/ShareStoryTheme" />
+        <activity android:name=".ui.activity.ChooseShortStoryCategoryActivity" />
 
         <service android:name=".sync.PushTokenService" />
         <service android:name=".sync.SyncUserInfoService" />
