unused gradle dependencies clean up

--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -29,34 +29,34 @@ dependencies {
 
     implementation 'pub.devrel:easypermissions:3.0.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.gms:play-services-plus:17.0.0'
-    implementation 'com.google.android.gms:play-services-maps:17.0.0'
-    implementation 'com.google.android.gms:play-services-gcm:17.0.0'
+//    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+//    implementation 'com.google.android.gms:play-services-gcm:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
-    implementation 'com.google.android.libraries.places:places:2.0.0'
+    implementation 'com.google.android.libraries.places:places:2.1.0'
     implementation 'com.google.android.gms:play-services-analytics:17.0.0'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
-    implementation 'com.google.android.gms:play-services-auth-api-phone:17.1.0'
-    implementation 'com.google.android.gms:play-services-ads:18.1.1'
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation 'com.google.firebase:firebase-appindexing:19.0.0'
-    implementation 'com.google.firebase:firebase-messaging:20.0.0'
-    implementation 'com.google.firebase:firebase-core:17.1.0'
-    implementation 'com.google.firebase:firebase-storage:19.0.0'
-    implementation 'com.google.firebase:firebase-auth:19.0.0'
-    implementation 'com.google.firebase:firebase-analytics:17.1.0'
-    implementation 'com.google.firebase:firebase-config:19.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.google.android.gms:play-services-auth-api-phone:17.3.0'
+//    implementation 'com.google.android.gms:play-services-ads:18.3.0'
+//    implementation 'com.google.android.material:material:1.0.0'
+//    implementation 'com.google.firebase:firebase-appindexing:19.0.0'
+    implementation 'com.google.firebase:firebase-messaging:20.1.0'
+    implementation 'com.google.firebase:firebase-core:17.2.2'
+    implementation 'com.google.firebase:firebase-storage:19.1.0'
+    implementation 'com.google.firebase:firebase-auth:19.2.0'
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    implementation 'com.google.firebase:firebase-config:19.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.nineoldandroids:library:2.4.0'
-    implementation 'com.android.volley:volley:1.1.0'
+//    implementation 'com.nineoldandroids:library:2.4.0'
+//    implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.mikhaellopez:circularimageview:3.0.2'
     implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
-    implementation 'com.google.api-client:google-api-client:1.23.0'
-    implementation 'com.google.api-client:google-api-client-android:1.23.0'
-    implementation 'com.google.api-client:google-api-client-gson:1.23.0'
-    implementation 'com.google.apis:google-api-services-calendar:v3-rev125-1.20.0'
+//    implementation 'com.google.api-client:google-api-client:1.23.0'
+//    implementation 'com.google.api-client:google-api-client-android:1.23.0'
+//    implementation 'com.google.api-client:google-api-client-gson:1.23.0'
+//    implementation 'com.google.apis:google-api-services-calendar:v3-rev125-1.20.0'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.squareup.retrofit2:retrofit:2.7.0'
@@ -67,20 +67,22 @@ dependencies {
     implementation 'com.github.yalantis:ucrop:2.2.4'
     implementation 'com.getbase:floatingactionbutton:1.10.1'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.1'
-    implementation 'io.tus.java.client:tus-java-client:0.3.1'
-    implementation 'io.tus.android.client:tus-android-client:0.1.4'
+//    implementation 'io.tus.java.client:tus-java-client:0.3.1'
+//    implementation 'io.tus.android.client:tus-android-client:0.1.4'
     implementation 'com.afollestad:easyvideoplayer:0.3.0'
     implementation 'commons-io:commons-io:2.4'
     implementation 'com.github.ittianyu:BottomNavigationViewEx:2.0.4'
     implementation 'q.rorbin:badgeview:1.1.0'
     implementation 'com.akexorcist:RoundCornerProgressBar:2.0.3'
     implementation 'com.facebook.android:facebook-android-sdk:4.38.1'
-    implementation 'com.facebook.android:audience-network-sdk:5.1.0'
+//    implementation 'com.facebook.android:audience-network-sdk:5.1.0'
     implementation 'com.shuhart.bubblepagerindicator:bubblepagerindicator:1.0.13'
     implementation 'com.mixpanel.android:mixpanel-android:5.6.4'
-    implementation 'com.facebook.fresco:fresco:1.10.0'
-    implementation 'com.github.stfalcon:frescoimageviewer:0.5.0'
-    implementation 'com.github.florent37:diagonallayout:1.0.9'
+//    implementation 'com.facebook.fresco:fresco:1.10.0'
+    //Groups ImageView pager in recyclerview
+    implementation 'com.github.stfalcon:stfalcon-imageviewer:1.0.0'
+//    implementation 'com.github.stfalcon:frescoimageviewer:0.5.0'
+//    implementation 'com.github.florent37:diagonallayout:1.0.9'
     implementation 'com.facebook.android:account-kit-sdk:5.4.0'
     implementation 'com.github.linger1216:labelview:v1.1.2'
     implementation 'com.googlecode.mp4parser:isoparser:1.1.21'
