--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -63,6 +63,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.7.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
+
+
     implementation 'org.apmem.tools:layouts:1.10@aar'
     implementation 'com.github.yalantis:ucrop:2.2.4'
     implementation 'com.getbase:floatingactionbutton:1.10.1'
