--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,7 @@ local.properties
 /.idea/modules.xml
 /.idea/workspace.xml
 /.idea/navEditor.xml
+/.idea/codeStyles/
 /.idea/assetWizardSettings.xml
 .DS_Store
 /build
