otp screen mymoney and userprofile

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -464,6 +464,9 @@
         <activity
             android:name=".ui.activity.FollowingListFBSuggestionActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.OTPActivity"
+            android:screenOrientation="portrait" />
 
         <meta-data
             android:name="io.branch.sdk.BranchKey"
