--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,7 @@ local.properties
 /.idea/assetWizardSettings.xml
 .DS_Store
 /build
+/app/release/
 /WordPressEditor/build/
 /captures
 .externalNativeBuild
