--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 187
-        versionName "13.0.23"
+        versionName "13.0.24"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -51,6 +51,12 @@ android {
     }
     configurations {
         all*.exclude group: 'com.android.volley'
+    }
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
     }
 }
 
