--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,8 @@ apply plugin: 'io.fabric'
 apply plugin: 'io.gitlab.arturbosch.detekt'
 apply plugin: 'checkstyle'
 
-apply from: '../ktlint.gradle'
+//apply from: '../ktlint.gradle'
+apply plugin: "org.jlleitschuh.gradle.ktlint"
 
 repositories {
     maven { url 'https://dl.bintray.com/drummer-aidan/maven' }
