--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,10 @@ buildscript {
         google()
         jcenter()
         maven {
-            url 'https://maven.fabric.io/public'
+            url "https://maven.fabric.io/public"
+        }
+        maven {
+            url "https://plugins.gradle.org/m2/"
         }
     }
     dependencies {
@@ -16,6 +19,7 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.3'
         classpath 'io.fabric.tools:gradle:1.31.2'
         classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:$detekt_version"
+        classpath "org.jlleitschuh.gradle:ktlint-gradle:9.2.1"
     }
 }
 
