--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 187
-        versionName "13.0.31"
+        versionName "13.0.32"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -212,9 +212,22 @@ task checkstyleChanged(type: Checkstyle) {
  * @return list of all changed files
  */
 def getChangedFiles() {
+    // Get the target and source branch
+    def ghprbTargetBranch = System.getenv("ghprbTargetBranch")
+    def ghprbSourceBranch = System.getenv("ghprbSourceBranch")
+
+    // Compare to master if no branch specified
+    def targetBranch
+    if (project.hasProperty("branch")) {
+        targetBranch = project.property("branch")
+    } else {
+        targetBranch = ghprbTargetBranch ? "origin/${ghprbTargetBranch}" : getParentBranch()
+    }
+    def sourceBranch = ghprbSourceBranch ? "origin/${ghprbSourceBranch}" : ""
+
     // Get list of all changed files including status
     def systemOutStream = new ByteArrayOutputStream()
-    def command = "git diff HEAD --name-status --diff-filter=dr"
+    def command = "git diff --name-status --diff-filter=dr $targetBranch $sourceBranch"
     command.execute().waitForProcessOutput(systemOutStream, System.err)
     def allFiles = systemOutStream.toString().trim().split('\n')
     systemOutStream.close()
@@ -223,7 +236,6 @@ def getChangedFiles() {
     Pattern statusPattern = Pattern.compile("(\\w)\\t+(.+)")
     List<String> files = new ArrayList<>()
     for (file in allFiles) {
-        println file
         Matcher matcher = statusPattern.matcher(file)
         if (matcher.find()) {
             files.add(matcher.group(2))
@@ -232,6 +244,32 @@ def getChangedFiles() {
 
     // Return the list of touched files
     files
+}
+
+/**
+ * Determines the parent branch.
+ *
+ * @return the found parent branch or master if not possible
+ */
+def getParentBranch() {
+    def branch = ""
+    // Get short name of the HEAD branch
+    def branchDeterminer = "git rev-parse --abbrev-ref HEAD".execute()
+    branchDeterminer.in.eachLine { line -> branch = line }
+    branchDeterminer.err.eachLine { line -> println line }
+    branchDeterminer.waitFor()
+    // Search all branches for parent
+    def branchLine = 'git show-branch -a'.execute().text.readLines().find {
+        it.contains('*') && !(it ==~ ".*\\[$branch[~^\\]].*")
+    }
+    try {
+        // Filter parent branch name
+        def parent = (branchLine =~ /\[([^~^\]]*)[~^\]]/)[0][1]
+        return parent
+    } catch (Exception ignored) {
+        println "Could not determine parent branch, compare to master"
+        return "master"
+    }
 }
 
 // Customize all the Checkstyle tasks
