--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
     android:icon="@drawable/myicon"
     android:label="@string/app_name"
     android:largeHeap="true"
+    android:requestLegacyExternalStorage="true"
     android:theme="@style/AppTheme"
     android:usesCleartextTraffic="true"
     tools:replace="android:allowBackup">
