--- a/app/build.gradle
+++ b/app/build.gradle
@@ -217,7 +217,8 @@ def getChangedFiles() {
     // Get the target and source branch
     def ghprbTargetBranch = System.getenv("ghprbTargetBranch")
     def ghprbSourceBranch = System.getenv("ghprbSourceBranch")
-
+    println ghprbTargetBranch
+    println ghprbSourceBranch
     // Compare to master if no branch specified
     def targetBranch
     if (project.hasProperty("branch")) {
@@ -229,7 +230,7 @@ def getChangedFiles() {
 
     // Get list of all changed files including status
     def systemOutStream = new ByteArrayOutputStream()
-    def command = "git diff --name-status --diff-filter=dr $targetBranch $sourceBranch"
+    def command = "git diff HEAD --name-status --diff-filter=dr"
     command.execute().waitForProcessOutput(systemOutStream, System.err)
     def allFiles = systemOutStream.toString().trim().split('\n')
     systemOutStream.close()
@@ -238,6 +239,7 @@ def getChangedFiles() {
     Pattern statusPattern = Pattern.compile("(\\w)\\t+(.+)")
     List<String> files = new ArrayList<>()
     for (file in allFiles) {
+        println file
         Matcher matcher = statusPattern.matcher(file)
         if (matcher.find()) {
             files.add(matcher.group(2))
@@ -279,12 +281,6 @@ tasks.withType(Checkstyle) {
     // Specify all files that should be checked
     classpath = files()
     source "${project.rootDir}"
-    include '**/*.java'
-    exclude '**/test/**'
-    exclude '**/androidTest/**'
-    exclude '**/gen/**'
-    exclude '**/R.java'
-    exclude '**/BuildConfig.java'
     reports {
         html {
             enabled true
