--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 187
-        versionName "13.0.32"
+        versionName "13.0.33"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -82,6 +82,8 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.ads:ads-identifier:1.0.0-alpha04'
+
     implementation 'com.google.android.gms:play-services-plus:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.google.android.libraries.places:places:2.2.0'
@@ -146,6 +148,8 @@ dependencies {
     implementation 'com.github.nkzawa:socket.io-client:0.6.0'
 
     implementation "com.github.YarikSOffice:lingver:1.2.1"
+
+    implementation 'com.google.guava:guava:28.0-android'
 
     compile('io.socket:socket.io-client:0.8.3') {
         exclude group: 'org.json', module: 'json'
