--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,7 +70,12 @@ android {
 check.dependsOn ktlint
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    def work_version = "2.3.4"
+
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    implementation "androidx.work:work-runtime:$work_version"
+    androidTestImplementation "androidx.work:work-testing:$work_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3'
