--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,9 @@
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+#Android studio asset config
+.idea/assetWizardSettings.xml
+
 # Mongo Explorer plugin
 .idea/**/mongoSettings.xml
 
