--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -406,10 +406,6 @@
       android:screenOrientation="portrait"
       android:theme="@style/EditorTheme" />
     <activity
-      android:name=".ui.activity.ChooseVideoCategoryActivity"
-      android:parentActivityName=".ui.activity.DashboardActivity"
-      android:screenOrientation="portrait" />
-    <activity
       android:name=".ui.activity.ChooseShortStoryCategoryActivity"
       android:parentActivityName=".ui.activity.DashboardActivity"
       android:screenOrientation="portrait" />
@@ -503,6 +499,7 @@
     <activity android:name=".ui.activity.phoneLogin.FacebookFriends" />
     <activity android:name=".ui.activity.collection.AddMultipleCollectionItemActivity" />
     <activity android:name=".ui.activity.ShortStoriesCardActivity" />
+    <activity android:name=".vlogs.VideoCategoryAndChallengeSelectionActivity" />
     <activity
       android:name=".ui.activity.PhoneContactsActivity"
       android:theme="@style/PermissionDialogTheme" />
