FB invite friends, survey campaign open in webview directly

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -462,6 +462,9 @@
       android:name=".ui.activity.FollowingListFBSuggestionActivity"
       android:screenOrientation="portrait" />
     <activity
+      android:name=".ui.activity.UserInviteFBSuggestionActivity"
+      android:screenOrientation="portrait" />
+    <activity
       android:name=".ui.activity.OTPActivity"
       android:screenOrientation="portrait" />
 
