--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -540,6 +540,16 @@
         android:resource="@xml/provider_paths" />
     </provider>
 
+    <provider
+      android:name="androidx.core.content.FileProvider"
+      android:authorities="com.momspresso.fileprovider"
+      android:exported="false"
+      android:grantUriPermissions="true">
+      <meta-data
+        android:name="android.support.FILE_PROVIDER_PATHS"
+        android:resource="@xml/file_paths" />
+    </provider>
+
     <meta-data
       android:name="com.google.android.gms.ads.APPLICATION_ID"
       android:value="@string/admob_id" />
