--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,10 +43,10 @@
     tools:replace="android:allowBackup">
     <activity
       android:name=".ui.rewards.activity.RewardsShareReferralCodeActivity"
-
       android:screenOrientation="portrait" />
     <activity
       android:name=".ui.mymoneytracker.activity.TrackerActivity"
+      android:screenOrientation="portrait"
       android:label="@string/title_activity_tracker"
       android:theme="@style/AppTheme.NoActionBar" />
 
@@ -75,6 +75,7 @@
       android:name=".filechooser.com.ipaulpro.afilechooser.FileChooserActivity"
       android:enabled="@bool/use_activity"
       android:exported="true"
+      android:screenOrientation="portrait"
       android:icon="@drawable/ic_chooser"
       android:label="@string/choose_file">
       <intent-filter>
@@ -201,7 +202,7 @@
       android:windowSoftInputMode="adjustPan" />
     <activity
       android:name=".ui.activity.LoadingActivity"
-      android:screenOrientation="unspecified"
+      android:screenOrientation="portrait"
       android:theme="@style/Theme.Transparent"
       android:windowSoftInputMode="adjustPan" />
     <activity
@@ -333,8 +334,12 @@
     <activity
       android:name=".ui.activity.GroupSettingsActivity"
       android:screenOrientation="portrait" />
-    <activity android:name=".ui.activity.LeaveGroupActivity" />
-    <activity android:name=".ui.activity.EditGroupActivity" />
+    <activity
+      android:name=".ui.activity.LeaveGroupActivity"
+      android:screenOrientation="portrait" />
+    <activity
+      android:name=".ui.activity.EditGroupActivity"
+      android:screenOrientation="portrait" />
     <activity
       android:name=".ui.activity.AddShortStoryActivity"
       android:screenOrientation="portrait"
@@ -491,25 +496,45 @@
       android:name="com.yalantis.ucrop.UCropActivity"
       android:screenOrientation="portrait"
       android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-    <activity android:name=".ui.videochallengenewui.activity.ExoplayerVideoChallengePlayViewActivity" />
-    <activity android:name=".ui.activity.collection.CollectionsActivity" />
+    <activity
+      android:name=".ui.videochallengenewui.activity.ExoplayerVideoChallengePlayViewActivity"
+      android:screenOrientation="portrait" />
+    <activity
+      android:name=".ui.activity.collection.CollectionsActivity"
+      android:screenOrientation="portrait" />
     <activity
       android:name=".ui.activity.collection.UserCollectionItemListActivity"
+      android:screenOrientation="portrait"
       android:theme="@style/EditorTheme" />
     <activity
       android:name=".ui.activity.collection.EditCollectionActivity"
+      android:screenOrientation="portrait"
       android:windowSoftInputMode="adjustPan" />
-    <activity android:name=".ui.activity.BadgeActivity" />
-    <activity android:name=".ui.activity.phoneLogin.FacebookFriends" />
-    <activity android:name=".ui.activity.collection.AddMultipleCollectionItemActivity" />
-    <activity android:name=".ui.activity.ShortStoriesCardActivity" />
-    <activity android:name=".ui.activity.ContentCreationTutorialListingActivity" />
-    <activity android:name=".vlogs.VideoCategoryAndChallengeSelectionActivity" />
+    <activity
+      android:name=".ui.activity.BadgeActivity"
+      android:screenOrientation="portrait" />
+    <activity
+      android:name=".ui.activity.phoneLogin.FacebookFriends"
+      android:screenOrientation="portrait" />
+    <activity
+      android:name=".ui.activity.collection.AddMultipleCollectionItemActivity"
+      android:screenOrientation="portrait" />
+    <activity
+      android:name=".ui.activity.ShortStoriesCardActivity"
+      android:screenOrientation="portrait" />
+    <activity
+      android:name=".ui.activity.ContentCreationTutorialListingActivity"
+      android:screenOrientation="portrait" />
+    <activity
+      android:name=".vlogs.VideoCategoryAndChallengeSelectionActivity"
+      android:screenOrientation="portrait" />
     <activity
       android:name=".ui.activity.PhoneContactsActivity"
+      android:screenOrientation="portrait"
       android:theme="@style/PermissionDialogTheme" />
     <activity
       android:name=".ui.activity.ShortStoryModerationOrShareActivity"
+      android:screenOrientation="portrait"
       android:theme="@style/ShareStoryTheme" />
 
     <service android:name=".sync.PushTokenService" />
