--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -323,6 +323,10 @@
       android:screenOrientation="portrait"
       android:windowSoftInputMode="stateHidden|adjustPan" />
     <activity
+      android:name=".ui.ArticleShortStoryMomVlogCommentNotificationActivity"
+      android:screenOrientation="portrait"
+      android:windowSoftInputMode="stateHidden|adjustPan" />
+    <activity
       android:name=".ui.activity.AddTextOrMediaGroupPostActivity"
       android:screenOrientation="portrait" />
     <activity
