--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,8 @@ android {
         applicationId "com.mycity4kids"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 196
-        versionName "14.0.4"
+        versionCode 197
+        versionName "14.0.5"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -137,7 +137,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'com.facebook.android:facebook-android-sdk:5.13.0'
     implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
-    implementation 'io.branch.sdk.android:library:3.+'
+    implementation 'io.branch.sdk.android:library:5.0.1'
     implementation 'com.mixpanel.android:mixpanel-android:5.6.4'
     implementation 'com.smartlook.recording:app:1.3.0-native'
     implementation 'org.greenrobot:eventbus:3.1.1'
