--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -309,7 +309,9 @@
       android:screenOrientation="portrait" />
     <activity
       android:name=".ui.activity.UpdateUserHandleActivity"
-      android:screenOrientation="portrait" />
+      android:configChanges="orientation|keyboardHidden|screenSize|layoutDirection"
+      android:screenOrientation="portrait"
+      android:windowSoftInputMode="adjustPan" />
     <activity
       android:name=".ui.activity.GroupDetailsActivity"
       android:screenOrientation="portrait" />
