--- a/app/build.gradle
+++ b/app/build.gradle
@@ -164,6 +164,8 @@ dependencies {
     detekt("io.gitlab.arturbosch.detekt:detekt-cli:$detekt_version")
     implementation 'org.apache.commons:commons-lang3:3.3.5'
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.4'
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+
 }
 
 detekt {
